Fix up z-indexes

--- a/ember/app/styles/bootstrap/variables.less
+++ b/ember/app/styles/bootstrap/variables.less
@@ -17,3 +17,7 @@
 @input-border-focus: @fl-body-control-bg;
 @input-color: @fl-body-control-color;
 @input-color-placeholder: @fl-body-control-color;
+
+@zindex-composer: @zindex-navbar-fixed + 4;
+@zindex-pane: @zindex-navbar-fixed + 5;
+@zindex-alerts: @zindex-modal + 10;
