--- a/ember/app/styles/flarum/composer.less
+++ b/ember/app/styles/flarum/composer.less
@@ -6,7 +6,7 @@
 	bottom: 0;
 	left: 0;
 	right: 0;
-	z-index: @zindex-navbar-fixed + 2;
+	z-index: @zindex-composer;
 	pointer-events: none;
 	.transition(left 0.2s);
 
